--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/ba6e7692db.js" crossorigin="anonymous"></script>
         <title>What's your Opinion ?</title>
     </head>
@@ -41,25 +41,27 @@
                     <div class="carre" id="green"></div>
                 </div>
 
-                <div class="container">
-                    <i class="fas fa-spinner"></i>
-                    <a href="pageThemathiques.html">
-                        Sondage en cours
-                    </a>
-                </div>
-                
-                <div class="container">
-                    <i class="fas fa-trophy"></i>
-                    <a href="pageClassement.html">
-                        Classement
-                    </a>
-                </div>
+                <div class="bloc">
+                    <div class="container">
+                        <i class="fas fa-spinner"></i>
+                        <a href="pageThemathiques.html">
+                            Sondage en cours
+                        </a>
+                    </div>
+                    
+                    <div class="container">
+                        <i class="fas fa-trophy"></i>
+                        <a href="pageClassement.html">
+                            Classement
+                        </a>
+                    </div>
 
-                <div class="container">
-                    <i class="fas fa-plus"></i>
-                    <a href="index.html">
-                        Créer un sondage
-                    </a>
+                    <div class="container">
+                        <i class="fas fa-plus"></i>
+                        <a href="index.html">
+                            Créer un sondage
+                        </a>
+                    </div>
                 </div>
 
                 <div id="doubleCarres">
