:construction: Work in progress

--- a/pageThemathiques.html
+++ b/pageThemathiques.html
@@ -122,6 +122,7 @@
             <p>Site réalisé par Claire BRISBART</p>
         </footer>   
              
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 
 </html>
