--- a/pageClassement.html
+++ b/pageClassement.html
@@ -99,6 +99,8 @@
         <footer>
             <p>Site réalisé par Claire BRISBART</p>
         </footer>
+
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 
 </html>
