--- a/pageSondage.html
+++ b/pageSondage.html
@@ -24,7 +24,7 @@
                 <!-- photo et question du sondage -->
                 <article>
                     <img src="img/carré-blanc.png" alt="un carré blanc libre de droit">
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam ?</p>
+                    <p id="title">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam ?</p>
                 </article>
 
                 <!-- choix du sondage -->
@@ -56,5 +56,7 @@
         <footer>
             <p>Site réalisé par Claire BRISBART</p>
         </footer>
+
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
