:construction: Work in progress :bulb: Add comments

--- a/pageSondage.html
+++ b/pageSondage.html
@@ -30,16 +30,16 @@
                 <!-- choix du sondage -->
 
                 <div class="poll" id="blue">
-                    <p>Lorem ipsum</p>
+                    <p id="choice1">Lorem ipsum</p>
                 </div>
                 <div class="poll" id="red">
-                    <p>Lorem ipsum</p>
+                    <p id="choice2">Lorem ipsum</p>
                 </div>
                 <div class="poll" id="green">
-                    <p>Lorem ipsum</p>
+                    <p id="choice3">Lorem ipsum</p>
                 </div>
                 <div class="poll" id="yellow">
-                    <p>Lorem ipsum</p>
+                    <p id="choice4">Lorem ipsum</p>
                 </div>
                 <button class="return" type="button">
                     <a href="pageThemathiques.html">
