:construction: Work in progress :lipstick: Update _sondage.css :art: Improve structure in pageSondage.html

--- a/pageSondage.html
+++ b/pageSondage.html
@@ -25,6 +25,7 @@
                 <article>
                     <img src="img/carré-blanc.png" alt="un carré blanc libre de droit">
                     <p id="title">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam ?</p>
+                    <div id="score"></div>
                 </article>
 
                 <!-- choix du sondage -->
