:building_construction: Add PopUp

--- a/pageSondage.html
+++ b/pageSondage.html
@@ -51,6 +51,18 @@
 
             <div class="auto" id="yellow"></div>
 
+            <!-- POP-UP -->
+            <div class="popup">
+                <div class="popupContent">
+                    <div class="popupInput">
+                        <h4>Montre-nous qui tu es dans le classement !</h2>
+                        <input type="text" placeholder="Prénom + Nom ou Pseudo">
+                        <button class="check" type="button">Valider</button>
+                    </div>
+                </div>
+            </div>
+
+
         </main>
         
         <!-- FOOTER -->
