:art: Change class for id

--- a/pageSondage.html
+++ b/pageSondage.html
@@ -52,7 +52,7 @@
             <div class="auto" id="yellow"></div>
 
             <!-- POP-UP -->
-            <div class="popup">
+            <div id="popup">
                 <div class="popupContent">
                     <div class="popupInput">
                         <h4>Montre-nous qui tu es dans le classement !</h2>
