:hammer: Update html files

--- a/pageSondage.html
+++ b/pageSondage.html
@@ -56,8 +56,9 @@
                 <div class="popupContent">
                     <div class="popupInput">
                         <h4>Montre-nous qui tu es dans le classement !</h2>
-                        <input type="text" placeholder="Prénom + Nom ou Pseudo">
-                        <button class="check" type="button">Valider</button>
+                        <div id="total"></div>
+                        <input type="text" id="nickname" placeholder="Prénom + Nom ou Pseudo">
+                        <button id="check" type="button">Valider</button>
                     </div>
                 </div>
             </div>
