:building_construction: Add popUp Classement

--- a/pageSondage.html
+++ b/pageSondage.html
@@ -54,11 +54,17 @@
             <!-- POP-UP -->
             <div id="popup">
                 <div class="popupContent">
-                    <div class="popupInput">
-                        <h4>Montre-nous qui tu es dans le classement !</h2>
+                    <div id="popupInput">
+                        <h4>Montre-nous qui tu es dans le classement !</h4>
                         <div id="total"></div>
                         <input type="text" id="nickname" placeholder="Prénom + Nom ou Pseudo">
                         <button id="check" type="button">Valider</button>
+                    </div>
+
+                    <div id="popupClassement">
+                        <h4>Résultats</h4>
+                        <div id="reference">Claire - 32 points</div>
+                        <div>Jean - 53 points</div>
                     </div>
                 </div>
             </div>
